# Pull-Request-Sentinel-CLI

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
reports/: report.json  review-report.md
samples/: sample.diff  sample1.diff
src/pr_sentinel/: __init__.py  cache.py  chunker.py  claude_runner.py  cli.py  config.py  diff_parser.py  git_diff.py  orchestrator.py  push_server.py  report_generator.py  router.py  runstats.py  ui.py
src/pr_sentinel/agents/: __init__.py  alignment_agent.py  base.py  performance_agent.py  quality_agent.py  security_agent.py  summary_agent.py  testing_agent.py
src/pr_sentinel/cli/: __init__.py  agents_cmd.py  cache_cmd.py  config_cmd.py  fix.py  push_azure.py  review.py  review_alignment.py  shared.py
src/pr_sentinel/diff/: __init__.py  git_diff.py
src/pr_sentinel/integrations/: __init__.py  azure_devops.py
src/pr_sentinel/prompts/: alignment.md  performance.md  quality.md  security.md  summary.md  testing.md
src/pr_sentinel/providers/: __init__.py  claude.py  common.py  copilot.py
src/pr_sentinel/report_generator/: __init__.py  html.py  markdown.py
tests/: test_alignment_agent.py  test_azure_devops.py  test_chunker.py  test_cli.py  test_diff_parser.py  test_fix.py  test_git_diff.py  test_providers.py  test_push_server.py  test_report_generator.py  test_summary_agent.py
